# Agriview

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  compose.av.yml  compose.fv.yml  x.sh  z.sh
src/: main.rs
templates/map/: index.html
