[package]
name = "agriview"
version = "0.1.3"
edition = "2021"

[dependencies]
base64 = "0.22"
num_cpus = "1.16"
reqwest = { version = "0.12.4", features = ["json"] }
serde_json = "1.0"
tera = "1.19"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"] }
warp = "0.3.7"

[[bin]]
name = "agriview"
path = "src/main.rs"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 2
debug = false
strip = true
